Added note about "preview feature"
Raw string literals are a "preview feature" in JDK 12, so this class must be compiled with --enable-preview and --release 12 and must be executed with --enable-preview.